Se suven avances al 20131205

--- a/system/common/cfg/system.cfg
+++ b/system/common/cfg/system.cfg
@@ -8,6 +8,7 @@
 ##
 ####
 ## Path/urls/filenames
+conf|site_title=MahanaimTlalpan.mx
 conf|app_title=Sistema de Administraci&oacuten
 #conf|path_site_url_prod=https://mahanaimtlalpan.mx/system/
 #conf|path_site_dir_prod=\mahanaimtlalpan.mx\system\
