Se arregla manejo de sesiones, se reubican header y path, se agrega jquery.confirm en menu de salir

--- a/system/common/cfg/system.cfg
+++ b/system/common/cfg/system.cfg
@@ -24,6 +24,7 @@ conf|path_img=common/img/
 conf|path_js=common/js/
 conf|path_html=common/html/
 conf|path_tpl=common/tpl/
+conf|php_header=common/php/header.php
 conf|php_functions=common/php/o3m_funciones.php
 conf|php_template=common/php/template.class.php
 conf|js_functions=common/js/o3m_funciones.js
